--- a/keyboards/tada68/keymaps/purespider/Makefile
+++ b/keyboards/tada68/keymaps/purespider/Makefile
@@ -11,10 +11,11 @@ SLEEP_LED_ENABLE = no       # Breathing sleep LED during USB suspend
 NKRO_ENABLE = yes           # Nkey Rollover - if this doesn't work, see here: https://github.com/tmk/tmk_keyboard/wiki/FAQ#nkro-doesnt-work
 BACKLIGHT_ENABLE = yes      # Enable keyboard backlight functionality
 MIDI_ENABLE = no            # MIDI controls
-UNICODE_ENABLE = no         # Unicode
+# UNICODE_ENABLE = no         # Unicode
 BLUETOOTH_ENABLE = no       # Enable Bluetooth with the Adafruit EZ-Key HID
 AUDIO_ENABLE = no           # Audio output on port C6
 RGBLIGHT_ENABLE = no        # Enable WS2812 RGB underlight.  Do not enable this with audio at the same time.
+UCIS_ENABLE = yes           # Enable typing of unicode symbols
 
 ifndef QUANTUM_DIR
 	include ../../../../Makefile
